--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;1,400;1,500&family=Poppins:ital,wght@0,300;1,200;1,300&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
